2008-11-11  John W. Eaton  <jwe@octave.org>

	* parse.y (F__parser_debug_flag__): New function.

2008-10-31  Jaroslav Hajek <highegg@gmail.com>

	* xnorm.cc: New source.
	* xnorm.h: New header file.
	* Makefile.in: Include xnorm.cc in the build process.
	* data.cc (Fnorm): Call xnorm, xcolnorms, xrownorms or xfrobnorm
	to do the actual work.


2008-10-31  David Bateman  <dbateman@free.fr>

	* ov-base-scalar.h (octave_value octave_base_scalar::reshape 
	(const dim_vector&) const): New method.

2008-10-30  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::index): Copy key_list.

2008-10-31  David Bateman  <dbateman@free.fr>

	* graphics.h.in (void image::init (void)): Add a constraint for
	logical cdata.
	
	* graphics.h.in (base_property::delete_listener): New method.
	(property::delete_listener): New method.
	(base_graphics_object::delete_listener): New method.
	(base_graphics_object::delete_property_listener): New method.
	(base_graphics_object::remove_all_listeners): New method.
	(graphics_object::delete_property_listener): New method.
	(axes::set_defaults): Call remove_all_listeners.
	* graphics.cc (void base_properties::delete_listener): New method
	(void base_graphics_object::remove_all_listeners (void)): New method
	(Fdellistener): New command to remove listener functions associated
	with a property.
	
2008-10-30  David Bateman  <dbateman@free.fr>

	* graphics.h.in (axes::properties): Add keyreverse property.
	* graphics.cc (axes::properties::set_defaults): Initialize
	keyreverse property.

2008-10-28  Jaroslav Hajek <highegg@gmail.com>

	* Cell.h (Cell::assign (const Array<idx_vector>&, ...),
	Cell::delete_elements (const Array<idx_vector>&, ...)):
	New member functions.
	* Cell.cc (Cell::assign (const octave_value_list&, ...),
	Cell::delete_elements (const octave_value_list&, ...)):
	Call Array<T>::assign.
	* DLD-FUNCTIONS/dlmread.cc: Call Array<T>::resize_fill.
	* ov-base-mat.cc (octave_base_matrix::assign): Call Array<T>::assign.